# banggood_data

./: README.md  load-to-sql.ipynb  pyproject.toml  requirements.txt
data/: automobiles_motorcycles.csv  cleaned_all_products.csv  computers_office.csv  electronics.csv  men_women_clothing.csv  sports_outdoor.csv
src/: analysis.ipynb  cleaner.py  scraper.py
