[project]
name = "banggood-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyodbc>=5.3.0",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "sqlalchemy>=2.0.44",
    "webdriver-manager>=4.0.2",
]
